add support for rtos aware debug

--- a/ComponentTests/freertos/freertos_opencm3_test/platformio.ini
+++ b/ComponentTests/freertos/freertos_opencm3_test/platformio.ini
@@ -21,4 +21,13 @@ build_flags = -g
  -Isrc
  -D FREERTOS_TAG=V10.4.5
 monitor_speed = 115200
-
+; with the custom debug tool the thread-aware debugging is activated in openocd
+debug_tool = custom
+; disable initial breakpoint
+debug_init_break = 
+debug_server =
+  $PLATFORMIO_CORE_DIR/packages/tool-openocd/bin/openocd
+  ;-f $PLATFORMIO_CORE_DIR/packages/tool-openocd/scripts/board/stm32f103c8_blue_pill.cfg
+  -f $PLATFORMIO_CORE_DIR/packages/tool-openocd/scripts/interface/stlink.cfg
+  -f $PLATFORMIO_CORE_DIR/packages/tool-openocd/scripts/target/stm32f1x.cfg
+  -f openocd-rtos.cfg
