add a FreeRTOS learning code sample

--- a/ComponentTests/freertos/learning/platformio.ini
+++ b/ComponentTests/freertos/learning/platformio.ini
@@ -30,5 +30,5 @@ debug_server =
   ;-f $PLATFORMIO_CORE_DIR/packages/tool-openocd/scripts/board/stm32f103c8_blue_pill.cfg
   -f $PLATFORMIO_CORE_DIR/packages/tool-openocd/scripts/interface/stlink.cfg
   -f $PLATFORMIO_CORE_DIR/packages/tool-openocd/scripts/target/stm32f1x.cfg
-  ; uncomment this line to enable freeRTOS aware debugging
+  ; uncomment this line to disable freeRTOS aware debugging
   ;-f openocd-rtos.cfg
